Added README updated TODOs

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 // TODO remove global exposure
 // add aria-disable true when can't click?
 // multi-browser support and api checks, currently only for non-mobile Chrome
+// logic or external script to use translation service
 window.app = {
 	data: {
 		synth : window.speechSynthesis,
